--- a/Form.css
+++ b/Form.css
@@ -161,7 +161,7 @@ label {
 
 /* Mobile device */
 @media (max-width: 768px) {
-  .contact-form {
+  .Main {
     flex-direction: column;
     padding: 10px;
   }
